<resources>
    <string name="app_name">HashCodeBattler</string>
    <string name="titleName">HashCodeBattler</string>
    <string name="Start">ゲームスタート</string>
    <string name="config">config</string>
    <string name="exit">Exit</string>
    <string name="rollTheDice">サイコロを振る</string>

    <string name="hitPoint">HP</string>
    <string name="attack">攻撃力</string>
    <string name="speed">俊敏</string>
    <string name="block">防御力</string>
    <string name="contact">特殊攻撃力</string>
    <string name="defenece">特殊防御力</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="normalAttack">通常攻撃</string>
    <string name="shield">防御</string>
    <string name="skill">スキル</string>
    <string name="item">アイテム</string>
    <string name="special">必殺技</string>

    <string name="start">決定</string>

    <string name="training">トレーニング</string>
    <string name="battle">バトル</string>
</resources>
