<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragment.MainPageFragment">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hpValueLabel" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView8" android:layout_marginStart="8dp"
            android:layout_marginEnd="100dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contactValueLabel"
            app:layout_constraintTop_toBottomOf="@+id/blockValueLabel"
            app:layout_constraintStart_toStartOf="@+id/blockValueLabel" android:layout_marginTop="8dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/defenceValueLabel"
            app:layout_constraintTop_toBottomOf="@+id/contactValueLabel"
            app:layout_constraintStart_toStartOf="@+id/contactValueLabel"
            android:layout_marginTop="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speedValueLabel"
            app:layout_constraintTop_toBottomOf="@+id/defenceValueLabel"
            app:layout_constraintStart_toStartOf="@+id/defenceValueLabel"
            android:layout_marginTop="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blockValueLabel"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/attackValueLabel"
            app:layout_constraintStart_toStartOf="@+id/attackValueLabel"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attackValueLabel"
            app:layout_constraintTop_toBottomOf="@+id/hpValueLabel"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="@+id/hpValueLabel"
    />
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerNameLabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/battle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/battleButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.091" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/trainingButton"/>
    <Button
            android:text="@string/training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trainingButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.091" android:layout_marginTop="252dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/hitPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"/>
    <TextView
            android:text="@string/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textView11"/>
    <TextView
            android:text="@string/defenece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/textView12" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView10"/>
    <TextView
            android:text="@string/attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView8" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView8"/>
</android.support.constraint.ConstraintLayout>
