<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
                                             android:name="androidx.navigation.fragment.NavHostFragment"
             tools:context=".Fragment.TitleFragment">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/Title"
            app:layout_constraintVertical_bias="0.077" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>
    <TextView
            android:text="@string/Start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gameStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="128dp" app:layout_constraintTop_toBottomOf="@+id/Title"/>
    <TextView
            android:text="@string/config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/config"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/gameStart"/>
    <TextView
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exit"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/config"/>
</android.support.constraint.ConstraintLayout>
