<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
            android:text="@string/rollTheDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.099"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="141dp"
            tools:layout_editor_absoluteX="168dp" android:id="@+id/button"/>
    <TextView
            android:text="@string/defenece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView6"/>
    <TextView
            android:text="@string/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView2"/>
    <TextView
            android:text="@string/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView5"/>
    <TextView
            android:text="@string/block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView4"/>
    <TextView
            android:text="@string/attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView3"/>
    <TextView
            android:text="@string/hitPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="128dp" android:layout_marginTop="256dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attackNumberLabel" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/hpNumberLabel"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/defenceNumberLabel" app:layout_constraintStart_toEndOf="@+id/textView2"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/contackNumberLabel"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blockNumberLabel" app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/attackNumberLabel"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contackNumberLabel" app:layout_constraintStart_toEndOf="@+id/textView6"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/blockNumberLabel"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speedNumberLabel" app:layout_constraintStart_toEndOf="@+id/textView7"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/defenceNumberLabel"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hpNumberLabel" app:layout_constraintStart_toEndOf="@+id/textView3"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView3"/>
</android.support.constraint.ConstraintLayout>