<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".Fragment.BattleFragment">

    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speednumlabel2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/defencenumlabel2"
            app:layout_constraintStart_toStartOf="@+id/defencenumlabel2" android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attacknumlabel2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/hpnumlabel2"
            app:layout_constraintStart_toStartOf="@+id/hpnumlabel2"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/defencenumlabel2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/contactnumlabel2"
            app:layout_constraintStart_toStartOf="@+id/contactnumlabel2" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/hitPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hplabel13" android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="220dp"/>
    <TextView
            android:text="@string/attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attacklabel2"
            app:layout_constraintTop_toBottomOf="@+id/hplabel13" app:layout_constraintStart_toStartOf="@+id/hplabel13"
            android:layout_marginTop="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/defenece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/defencelabel2"
            app:layout_constraintTop_toBottomOf="@+id/contactlabel2"
            app:layout_constraintStart_toStartOf="@+id/contactlabel2" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contactlabel2"
            app:layout_constraintTop_toBottomOf="@+id/blocklabel2"
            app:layout_constraintStart_toStartOf="@+id/blocklabel2"
            android:layout_marginTop="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blocklabel2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/attacklabel2"
            app:layout_constraintStart_toStartOf="@+id/attacklabel2" android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hpnumlabel2"
            app:layout_constraintTop_toTopOf="@+id/hplabel13"
            app:layout_constraintStart_toEndOf="@+id/hplabel13" android:layout_marginStart="56dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blocknumlabel2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/attacknumlabel2"
            app:layout_constraintStart_toStartOf="@+id/attacknumlabel2" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speedlabel2"
            app:layout_constraintTop_toBottomOf="@+id/defencelabel2"
            app:layout_constraintStart_toStartOf="@+id/defencelabel2" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contactnumlabel2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/blocknumlabel2"
            app:layout_constraintStart_toStartOf="@+id/blocknumlabel2" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/hitPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hplabel" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="96dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attacklabel"
            app:layout_constraintTop_toBottomOf="@+id/hplabel"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="@+id/hplabel"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blocklabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/attacklabel"
            app:layout_constraintStart_toStartOf="@+id/attacklabel" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contactlabel"
            app:layout_constraintTop_toBottomOf="@+id/blocklabel" app:layout_constraintStart_toStartOf="@+id/blocklabel"
            android:layout_marginTop="8dp" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/defenece"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/defencelabel"
            app:layout_constraintTop_toBottomOf="@+id/contactlabel"
            app:layout_constraintStart_toStartOf="@+id/contactlabel" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speedlabel"
            app:layout_constraintTop_toBottomOf="@+id/defencelabel"
            app:layout_constraintStart_toStartOf="@+id/defencelabel" android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/attacknumlabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/hpnumlabel" app:layout_constraintStart_toStartOf="@+id/hpnumlabel"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hpnumlabel"
            app:layout_constraintTop_toTopOf="@+id/hplabel"
            app:layout_constraintStart_toEndOf="@+id/hplabel" android:layout_marginStart="56dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blocknumlabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/attacknumlabel"
            app:layout_constraintStart_toStartOf="@+id/attacknumlabel" android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contactnumlabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/blocknumlabel"
            app:layout_constraintStart_toStartOf="@+id/blocknumlabel" android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/defencenumlabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/contactnumlabel"
            app:layout_constraintStart_toStartOf="@+id/contactnumlabel" android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speednumlabel" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/defencenumlabel"
            app:layout_constraintStart_toStartOf="@+id/defencenumlabel" android:layout_marginStart="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enemy" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="252dp"
            android:layout_marginTop="52dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player2" android:layout_marginTop="52dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="48dp"/>
    <ScrollView
            android:layout_width="395dp"
            android:layout_height="465dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/scrollView1">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"/>
    </ScrollView>
    <fragment
            android:layout_width="377dp"
            android:layout_height="68dp"
            android:name="com.example.hashcodebattler.Fragment.PartsFragment.BattleButtonsFragment"
            android:id="@+id/fragment2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.465"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/scrollView1"/>

</android.support.constraint.ConstraintLayout>